<resources>
    <!-- This is the app's name, translators please do not translate and put in the same text as English version. Developers can consider putting in their own translation, this string must be changed before publishing -->
    <string name="app_name" translatable="false">D4rK Stickers</string>
    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description" translatable="false">Sticker Pack Tray Image</string>
    <!-- the title of info button in the menu that takes the user to more information about that pack showing publisher website and so on -->
    <string name="more_info_button" translatable="false">More info about sticker pack!</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp" translatable="false">Add to WhatsApp</string>
    <!-- Content Description for the plus button shown on sticker pack list, that allows user to add sticker pack to WhatsApp -->
    <string name="add_button_content_description" translatable="false">Add sticker pack to WhatsApp</string>
    <!-- Title of the sticker pack list activity page in case the app contains multiple sticker packs, the singular string will be used when there is only one pack in the app -->
    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one" translatable="false">Sticker Pack:</item>
        <item quantity="other" translatable="false">Sticker Packs:</item>
    </plurals>
    <!-- Title of the sticker pack page when there are multiple sticker packs in the app -->
    <string name="title_activity_sticker_pack_details_multiple_pack" translatable="false">Sticker details:</string>
    <!-- Title of the sticker pack info page which displays the webpage, email and privacy policy of the sticker pack -->
    <string name="title_activity_sticker_pack_info" translatable="false">Info:</string>
    <!-- Text of button that allows user to click to go to the webpage of the publisher -->
    <string name="view_webpage" translatable="false">View YouTube channel</string>
    <!-- Text of button that allows user to click to send an email -->
    <string name="send_email" translatable="false">Send email</string>
    <!-- Text of button that allows user to click to go to the privacy policy website -->
    <string name="privacy_policy" translatable="false">Privacy policy</string>
    <!-- Text of button that allows user to click to go to the license agreement website -->
    <string name="license_agreement" translatable="false">License agreement</string>
    <!-- Text next to the tray icon that indicates the tray icon -->
    <string name="info_screen_tray_icon" translatable="false">Tray icon</string>
    <!-- Text shown to the user instead of Add to WhatsApp button if the pack is already added to WhatsApp -->
    <string name="details_pack_already_added" translatable="false">Sticker pack added to WhatsApp!</string>
    <!-- Title in the intent chooser that shows when user has multiple email client installed -->
    <string name="info_send_email_to_prompt" translatable="false">Send email with</string>
    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp" translatable="false">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link" translatable="false">Update</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store" translatable="false">Google Play is not installed on the device.</string>
    <string name="changelog" translatable="false">D4rK Stickers - Changelog:\n
<br> </br>
        \n
<br> </br>
        <b>Version 3.0 (beta):\n</b>
        <br> </br>
        -Added splash screen;\n
        <br> </br>
        -Android 10 Q (API 29) is minimum SDK now;\n
        <br> </br>
        -Performance &amp; other optimizations;\n
        <br> </br>
        -New adaptive Dark Mode;\n
        <br> </br>
        -New icons;\n
        <br> </br>
        -New UI;\n
        <br> </br>
        -New stickers;\n
        <br> </br>
        -Removed all unused flags;\n
        <br> </br>
        -Removed unused strings;\n
        <br> </br>
        -Added ldpi support;\n
        <br> </br>
        -New sticker packs;\n
        <br> </br>
        -Updated all scripts;\n
        <br> </br>
        -Bug fixes.
<br> </br>
        \n
<br> </br>
        \n
        <b>Version 2.0:\n</b>
        <br> </br>
        -Changelog added;\n
        <br> </br>
        -Compatibility with Android R;\n
        <br> </br>
        -Gradle scripts updated;\n
        <br> </br>
        -Crash fixed;\n
        <br> </br>
        -Android 7.1.1 N (API 25) is minimum SDK now;\n
        <br> </br>
        -Fixed layout;\n
        <br>
        -New stickers.\n
        </br>
<br> </br>
        \n
<br> </br>
        <b>Version 1.0:\n</b>
        <br> </br>
        -Initial release.\n
        <br> </br>
    </string>
</resources>
