<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/infoPageBackgroundColor"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".StickerPackInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tray_icon"
            style="@style/InfoButtonStyle"
            android:clickable="false"
            android:text="@string/info_screen_tray_icon"
            android:textColor="#673AB7"
            tools:drawableLeft="@drawable/sticker_3rdparty_web"
            tools:drawableStart="@drawable/sticker_3rdparty_web" />

        <TextView
            android:id="@+id/view_webpage"
            style="@style/InfoButtonStyle"
            android:text="@string/view_webpage"
            app:drawableStartCompat="@drawable/sticker_3rdparty_web" />

        <TextView
            android:id="@+id/send_email"
            style="@style/InfoButtonStyle"
            android:text="@string/send_email"
            app:drawableStartCompat="@drawable/sticker_3rdparty_email" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/InfoButtonStyle"
            android:text="@string/privacy_policy"
            app:drawableStartCompat="@drawable/sticker_3rdparty_privacy" />

        <TextView
            android:id="@+id/license_agreement"
            style="@style/InfoButtonStyle"
            android:text="@string/license_agreement"
            app:drawableStartCompat="@drawable/sticker_3rdparty_license" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:requiresFadingEdge="vertical"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:text="@string/changelog"
            android:textAlignment="center" />

    </LinearLayout>
</LinearLayout>
